public class Dish extends Item {
	public Dish(int id, String name, String category, double price) {
		super(id, name, category, price);
	}
}
