public class Drink extends Item {

	public Drink(int id, String name, String category, double price) {
		super(id, name, category, price);
	}
}
