public class Ingredient {

	private String name;


}
