public enum Job {
    CHEF,
    KITCHEN_ASSISTANT,
    WAITER,
    MANAGER
}
