import java.util.ArrayList;

public class Main {
	static void main(String[] args) {

		Restaurant restaurant = new Restaurant();
		restaurant.initialize();
		Restaurant.ChooseMenu().show();

	}
}


