public enum OrderStatus {

	ACTIVE,
	READY,
	CANCELLED

}
