import java.util.ArrayList;

public class Restaurant {
	public static ArrayList<User> users;
	public static ArrayList<Table> tables;
	public static MenuCard menuCard;
	//public static MenuCard dessertMenu;
	//public static MenuCard drinksMenu;
	public static Menu userMenu;
	public static Menu managerMenu;
	public static Menu kitchenMenu;
	public static DBConnector dbConnector;

	public Restaurant() {
		dbConnector = new DBConnector();
	}



	public void initialize() {
		// Henter data fra databasen
		dbConnector.connect("jdbc:sqlite:restaurantData.sqlite");
		users = dbConnector.selectUser();
		tables = dbConnector.selectTable();
		menuCard = dbConnector.selectMenuCard();
		// dessertMenu = dbConnector.selectdessertMenu();
		// drinksMenu = dbConnector.selectdrinksMenu();
		userMenu = new WaiterMenu(tables);
		managerMenu = new ManagerMenu();
		kitchenMenu = new KitchenMenu();
		kitchenMenu.setActiveOrders(userMenu.activeOrders);

	}


	public static Menu ChooseMenu() {

		System.out.println("============ Restaurant Management System ============");
		int input = TextUI.promptNumeric("1.Waiter\n2.Manager\n3.Kitchen Staff");

		if (input == 1) {
			return userMenu;
		} else if (input == 2) {
			return managerMenu;
		} else if (input == 3) {
			return kitchenMenu;
		} else {
			return ChooseMenu();
		}

	}




	@Override
	public String toString() {
		return "Restaurant{" +
				"users=" + users +
				", tables=" + tables +
				", menuCard=" + menuCard +
				", userMenu=" + userMenu +
				", dbConnector=" + dbConnector +
				'}';
	}
}
