 @startuml
!pragma layout smetana

' Del 1
class Main {

}
class Restaurant {
ArrayList<User> users
ArrayList<Table> tables
ArrayList<StatReport> reports
MenuCard foodMenu
MenuCard dessertMenu
MenuCard drinksMenu
EmployeeSchedule schedule
Menu userMenu

}
class User {
int userID;
String name;
double salary;
String position;

void addUser(String Name, double salary)
void removeUser(String name)
void printUserInfo(String name)
void printAllUsers()



}

' Del 2
class Menu{
    boolean isVisible
    ArrayList<Order> activeOrders
    + show()
    + hide()
    + navigate()
}

class KitchenMenu{
    ArrayList<Order> delayedOrders
    ArrayList<Order> readyOrders
    ArrayList<Notes> kitchenNotes
    + updateOrderStatus()
    + addNotes()
    + markAsReady()
}

class ManagerMenu {
    ArrayList<StatReport> reports
    ArrayList<Item> inventory
    ArrayList<User> staff
    + viewReports()
    + manageInventory()
    + manageStaff()
    + manageMenuCard()
}
class WaiterMenu {
    ArrayList<Table> tables
    + showReservations()
    + getAvailableTables()
    + addOrderToTable()
    + addNoteToOrder()
    + getInvoice()

}

' Del 3
class Table {
    int id
    TableStatus tableType
    int seats
    LocalDate openingTime
    LocalDate closingTime
    ArrayList<Order> orders

    void addOrder()
    void removeOrder()
    void printOrder()
    void generateInvoice()
    void printReservation()
}
enum TableStatus {
    AVAILABLE
    BUSY
    RESERVED
}
class Customer {
    String name
    String phone
    ArrayList<String> reviews
}
class Reservation {
    LocalDate time
    int personCount
    String customerName
}

class Order {
    int OrderID
    int OrderLineID
    int tableID
    int id
    double price
    OrderStatus orderstatus

}

enum OrderStatus{
    ACTIVE
    READY
    CANCELLED
}

class Notes {
    Arraylist<String> notes
    void addNotes()
}
class Invoice {
    int id
    LocalDate date
    ArrayList<Order> orders
    double totalAmount
    void printInvoice()
}

' Del 4
class MenuCard {
    ArrayList<Item> menuItems
    ArrayList<Item> discountedItems
    Image frontPage
}
class Item {
    String name
    String description
    double price
    ArrayList<Ingredient> ingredients
    int calories
}
class Dish
class Drink
class Ingredient {
    String name
}
class EmployeeSchedule {
    TimeSlot[] timeSlots
}

class TimeSlot {
    ArrayList<Employee> employees
}

class Employee {
    Job job
}

enum Job {
    CHEF,
    KITCHEN ASSISTANT,
    WAITER,
    MANAGER
}
Main *-- Restaurant
Restaurant *-- User
Restaurant *-- Menu
Menu --|> KitchenMenu
Menu --|> ManagerMenu
Menu --|> WaiterMenu
Restaurant *-- MenuCard
Restaurant *-- Table
TableStatus --* Table
Table o-- Order
Order o-- Notes
OrderStatus --* Order
Table o-- Customer
Table o-- Invoice
Table o-- Reservation
Restaurant o-- EmployeeSchedule
EmployeeSchedule *-- TimeSlot
TimeSlot o-- Employee
Employee *-- Job
MenuCard *-- Item
Item --|> Dish
Item --|> Drink
Item *-- Ingredient

@enduml